Atualização do projeto Java